Change the UI by @MonkeyTiger

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,12 @@ body {
   font-family: system-font;
   color: #111;
 }
+
+body {
+  background-color: #0E141F;
+  padding: 6.25vw 5vw 3.6vw;
+}
+
 button {
   font-family: system-font;
   font-size: 0.9em;
@@ -69,7 +75,6 @@ h2 {
   transition: opacity 0.2s ease-in;
   box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
 }
-.mode-chooser,
 .message-body {
   flex: 0 1 auto;
   text-align: left;
@@ -104,4 +109,99 @@ h2 {
   justify-content: space-between;
   max-width: 550px;
   margin: 0 auto;
+}
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  color: #F9EEC4;
+  height: calc(100vh - 150px)
+}
+
+.main {
+  flex: 1 1 auto;
+  margin: 0 100px;
+}
+
+.score {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  font-family: Righteous;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 6.6vw;
+  color: #F3DD00;
+  text-shadow: -5px 5px 0px #CB3E29;
+}
+
+.score .vs {
+  font-size: 3.3vw;
+}
+
+.section {
+  position: relative;
+  width: 100%;
+  max-width: 855px;
+}
+
+.section-canvas {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
+.player {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.player input[type=file] {
+  display: none;
+}
+
+.player label {
+  font-family: 'Comfortaa';
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10vw;
+  height: 10vw;
+  flex-direction: column;
+  border: 1px solid #F9EEC4;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1.25vw;
+}
+
+.player label .plus {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 5vw;
+  text-align: center;
+}
+
+#imgP1, #imgP2 {
+  width: 10vw;
+  height: 10vw;
+  display: none;
+}
+
+.player-name {
+  font-family: Righteous;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 4.44vw;
+  text-align: center;
+  color: #F3DD00;
+  text-shadow: -5px 5px 0px #CB3E29;
+  margin-top: 40px;
+}
+
+.statusbox {
+  position: fixed;
+  bottom: 0;
+  left: 0;
 }
